@@ -276,6 +276,7 @@ Pauli Nieminen (coren/suokko)
 Petr Sobotka (Pietro)
 Priit Laes (plaes)
 Rocco J Carello (rogue)
+Sebastian Goll (afran)
 Serge Martin (EdB)
 Stéphane Gimenez (gim)
 Thomas Baumhauer (Baufo)
